--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
               * { margin: 0; padding: 0; box-sizing: border-box; }
               body { margin: 0; padding: 0; overflow: hidden; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; }
               .screen { width: 100vw; height: 100vh; background: linear-gradient(135deg,#1e3a8a 0%,#581c87 50%,#312e81 100%); position: relative; overflow: hidden; }
-              .grid-bg { position: absolute; inset: 0; opacity: 0.2; background-image: linear-gradient(rgba(255,255,255,0.1) 1px, transparent 1px), linear-gradient(90deg, rgba(255,255,255,0.1) 1px, transparent 1px); background-size: 50px 50px; }
-              .player { position: absolute; width: 48px; height: 48px; background: linear-gradient(135deg,#22d3ee 0%,#3b82f6 100%); border-radius: 8px; box-shadow: 0 0 20px rgba(34,211,238,0.6); transition: all 75ms; overflow: hidden; }
+              .grid-bg { position: absolute; inset: 0; opacity: 0.12; background-image:
+                linear-gradient(rgba(255,255,255,0.04) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(255,255,255,0.03) 1px, transparent 1px);
+                background-size: 40px 40px, 40px 40px;
+              }
+              .player { position: absolute; width: 48px; height: 48px; background: linear-gradient(135deg,#22d3ee 0%,#3b82f6 100%); border-radius: 8px; box-shadow: 0 0 20px rgba(34,211,238,0.6); transition: left 80ms linear, top 80ms linear; overflow: hidden; }
               .hud { position: absolute; top: 16px; left: 16px; background: rgba(0,0,0,0.5); backdrop-filter: blur(10px); color: white; padding: 12px 16px; border-radius: 8px; }
-              .babies-button { background: linear-gradient(90deg,#22d3ee 0%,#3b82f6 100%); color: white; font-weight: bold; padding: 8px 16px; border-radius: 6px; border: none; cursor: pointer; font-size: 14px; margin-bottom: 8px; transition: all 0.2s; display: block; width: 100%; }
-              .admin-button { background: linear-gradient(90deg,#f97316 0%,#ef4444 100%); color: white; font-weight: bold; padding: 8px 12px; border-radius: 6px; border: none; cursor: pointer; font-size: 13px; margin-top: 8px; transition: all 0.15s; display: block; width: 100%; }
+              .babies-button { background: linear-gradient(90deg,#22d3ee 0%,#3b82f6 100%); color: white; font-weight: bold; padding: 8px 16px; border-radius: 6px; border: none; cursor: pointer; font-size:14px; margin-right:8px; }
+              .admin-button { background: linear-gradient(90deg,#f97316 0%,#ef4444 100%); color: white; font-weight: bold; padding: 8px 12px; border-radius: 6px; border: none; cursor: pointer; font-size:14px; }
               .babies-button:hover, .admin-button:hover { transform: scale(1.03); }
               .modal-overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.7); backdrop-filter: blur(4px); display: flex; align-items: center; justify-content: center; z-index: 1000; }
               .modal { background: rgba(0,0,0,0.9); border: 2px solid rgba(34,211,238,0.5); border-radius: 16px; padding: 24px; max-width: 900px; width: 92%; max-height: 85vh; overflow: auto; color: white; }
@@ -24,20 +28,20 @@
               .character-option.selected { border-color: #22d3ee; background: rgba(34,211,238,0.12); box-shadow: 0 0 20px rgba(34,211,238,0.25); }
               .character-image { width: 100%; height: 120px; object-fit: contain; margin-bottom: 8px; border-radius: 8px; background: rgba(255,255,255,0.03); }
               .character-name { color: white; font-weight: bold; font-size: 14px; text-align: center; }
-              .close-modal { background: rgba(255,255,255,0.08); color: white; border: 1px solid rgba(255,255,255,0.18); padding: 10px 16px; border-radius: 8px; cursor: pointer; margin-top: 12px; width: 100%; font-size: 14px; transition: all 0.15s; }
+              .close-modal { background: rgba(255,255,255,0.08); color: white; border: 1px solid rgba(255,255,255,0.18); padding: 10px 16px; border-radius: 8px; cursor: pointer; margin-top: 12px; width: 100%; }
               .close-modal:hover { background: rgba(255,255,255,0.12); }
               .position { font-size: 11px; color: #9ca3af; margin-top: 8px; }
-              .username-label { position: absolute; background: rgba(0,0,0,0.7); backdrop-filter: blur(8px); color: #22d3ee; padding: 4px 12px; border-radius: 6px; font-size: 14px; font-weight: bold; white-space: nowrap; pointer-events: none; transition: all 75ms; transform: translateX(-50%); }
+              .username-label { position: absolute; background: rgba(0,0,0,0.7); backdrop-filter: blur(8px); color: #22d3ee; padding: 4px 12px; border-radius: 6px; font-size: 14px; font-weight: bold; pointer-events: none; transform: translateX(-50%); white-space: nowrap; }
               .username-label.admin { background: linear-gradient(90deg,#ff0000,#ff7f00,#ffff00,#00ff00,#0000ff,#4b0082,#8f00ff); color: white; box-shadow: 0 0 12px rgba(0,0,0,0.6); }
               .center-container { width: 100vw; height: 100vh; display: flex; align-items: center; justify-content: center; }
               .welcome-box { background: rgba(0,0,0,0.5); backdrop-filter: blur(16px); border-radius: 16px; padding: 32px; max-width: 420px; width: 90%; border: 1px solid rgba(255,255,255,0.18); }
               .title { font-size: 36px; font-weight: bold; color: white; text-align: center; margin-bottom: 8px; }
               .subtitle { color: #d1d5db; text-align: center; margin-bottom: 16px; }
-              .input { width: 100%; padding: 12px 16px; border-radius: 8px; background: rgba(255,255,255,0.06); border: 1px solid rgba(255,255,255,0.2); color: white; font-size: 16px; margin-bottom: 12px; outline: none; }
+              .input { width: 100%; padding: 12px 16px; border-radius: 8px; background: rgba(255,255,255,0.06); border: 1px solid rgba(255,255,255,0.2); color: white; font-size: 16px; margin-bottom: 12px; }
               .input:focus { border-color: #22d3ee; box-shadow: 0 0 0 2px rgba(34,211,238,0.18); }
               .input::placeholder { color: #9ca3af; }
               .error { background: rgba(239,68,68,0.18); border: 1px solid #ef4444; color: #fecaca; padding: 10px 12px; border-radius: 8px; margin-bottom: 12px; font-size: 14px; }
-              .button { width: 100%; background: linear-gradient(90deg,#22d3ee 0%,#3b82f6 100%); color: white; font-weight: bold; padding: 12px; border-radius: 8px; border: none; cursor: pointer; font-size: 16px; box-shadow: 0 4px 6px rgba(0,0,0,0.3); transition: all 0.18s; }
+              .button { width: 100%; background: linear-gradient(90deg,#22d3ee 0%,#3b82f6 100%); color: white; font-weight: bold; padding: 12px; border-radius: 8px; border: none; cursor: pointer; font-size: 16px; }
               .button:hover { transform: translateY(-2px); }
               .rules { margin-top: 12px; text-align: center; font-size: 12px; color: #9ca3af; }
               .rules p { margin: 4px 0; }
@@ -133,6 +137,61 @@
                   from { transform: translateX(-50%) translateY(-6px); opacity: 0; }
                   to { transform: translateX(-50%) translateY(0); opacity: 1; }
               }
+
+              /* Chat UI (top-right) */
+              .chat-box {
+                  position: fixed;
+                  right: 18px;
+                  top: 18px;
+                  width: 320px;
+                  max-width: 38vw;
+                  z-index: 2200;
+                  background: linear-gradient(180deg, rgba(0,0,0,0.55), rgba(0,0,0,0.45));
+                  border-radius: 12px;
+                  border: 1px solid rgba(255,255,255,0.06);
+                  padding: 8px;
+                  color: white;
+                  box-shadow: 0 8px 30px rgba(0,0,0,0.6);
+                  backdrop-filter: blur(6px);
+                  display: flex;
+                  flex-direction: column;
+              }
+              .chat-header { font-weight: 800; text-align: center; margin: 6px 0 8px 0; color: #22d3ee; }
+              .chat-messages { display:flex; flex-direction:column-reverse; gap:8px; overflow:hidden; max-height: 220px; padding: 6px; }
+              .chat-message { background: rgba(255,255,255,0.04); border: 1px solid rgba(255,255,255,0.06); padding: 8px 10px; border-radius: 8px; font-size: 13px; word-break: break-word; }
+              .chat-meta { font-size: 11px; color: #9ca3af; margin-bottom: 4px; font-weight:700; }
+              .chat-input-row { display:flex; gap:8px; margin-top:8px; }
+              .chat-input { flex: 1; padding: 8px 10px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.06); background: rgba(255,255,255,0.02); color: white; outline: none; }
+              .chat-send-btn { padding: 8px 12px; border-radius: 8px; border: none; background: linear-gradient(90deg,#22d3ee,#3b82f6); color: white; font-weight: 700; cursor: pointer; }
+              .chat-send-btn:active { transform: translateY(1px); }
+
+              /* Bubble above character */
+              .speech-bubble {
+                  position: absolute;
+                  pointer-events: none;
+                  transform: translateX(-50%);
+                  background: rgba(255,255,255,0.92);
+                  color: #111;
+                  padding: 6px 10px;
+                  border-radius: 12px;
+                  box-shadow: 0 8px 20px rgba(0,0,0,0.4);
+                  max-width: 240px;
+                  font-weight: 700;
+                  z-index: 1500;
+                  font-size: 13px;
+                  white-space: nowrap;
+              }
+              .speech-bubble::after {
+                  content: '';
+                  position: absolute;
+                  left: 50%;
+                  transform: translateX(-50%);
+                  bottom: -6px;
+                  border-width: 6px 6px 0 6px;
+                  border-style: solid;
+                  border-color: rgba(255,255,255,0.92) transparent transparent transparent;
+              }
+
     </style>
   </head>
   <body>
@@ -185,6 +244,13 @@
           const animationFrame = useRef(null);
 
           const SPEED = 4;
+
+          // Chat (local-only, no Firebase)
+          const [chatMessages, setChatMessages] = useState([]); // newest last
+          const [chatInput, setChatInput] = useState('');
+          const [selfBubble, setSelfBubble] = useState(null);
+          const CHAT_MAX = 10;
+          const BUBBLE_DURATION = 5000;
 
           const characters = {
               aurababy: { name: 'Aurababy', image: 'https://i.ibb.co/nq467xv6/aurababy.png' },
@@ -597,6 +663,48 @@
               renderRef.current = next;
           }, [players, position, username, selectedCharacter]);
 
+          // Chat input change: enforce lowercase + only allowed characters (a-z, 0-9, space, underscore)
+          const handleChatChange = (e) => {
+              let v = e.target.value || '';
+              v = v.toLowerCase();
+              // strip disallowed characters
+              v = v.replace(/[^a-z0-9 _]/g, '');
+              // optionally trim leading spaces
+              setChatInput(v);
+          };
+
+          // Send chat (local only)
+          const handleChatSend = (e) => {
+              if (e && e.preventDefault) e.preventDefault();
+              if (!username) return;
+              const text = (chatInput || '').trim();
+              if (!text) return;
+              if (text.length > 200) return alert('Message too long (200 chars max)');
+              // prevent messages with banned words
+              if (containsBadWord(text)) return alert('Message contains inappropriate language');
+
+              const msg = { id: crypto.randomUUID(), username, text, ts: Date.now(), playerId: playerId.current };
+              setChatMessages(prev => {
+                  const next = [...prev, msg].slice(-CHAT_MAX);
+                  return next;
+              });
+              // show above self
+              setSelfBubble(msg);
+              setTimeout(() => {
+                  setSelfBubble(prev => (prev && prev.id === msg.id ? null : prev));
+              }, BUBBLE_DURATION);
+
+              setChatInput('');
+          };
+
+          // helper for keypress in chat input (Enter to send)
+          const onChatKeyDown = (e) => {
+              if (e.key === 'Enter') {
+                  e.preventDefault();
+                  handleChatSend();
+              }
+          };
+
           if (!username) {
               return React.createElement('div', { className: 'screen center-container' },
                   React.createElement('div', { className: 'welcome-box' },
@@ -663,7 +771,13 @@
                       React.createElement('div', {
                           className: 'username-label' + (p.admin ? ' admin' : ''),
                           style: { left: `${p.x + 24}px`, top: `${p.y + 58}px` }
-                      }, p.username)
+                      }, p.username),
+
+                      // If this is the local player's rendering and we have a self bubble, show it above character
+                      (id === playerId.current && selfBubble) ? React.createElement('div', {
+                          className: 'speech-bubble',
+                          style: { left: `${p.x + 24}px`, top: `${p.y - 18}px` }
+                      }, selfBubble.text) : null
                   )
               ),
 
@@ -672,6 +786,32 @@
                   React.createElement('button', { className: 'babies-button', onClick: () => setShowModal(true) }, '👶 Babies'),
                   isAdminUser && React.createElement('button', { className: 'admin-button', onClick: () => setShowAdminModal(true) }, '🔧 Admin Panel'),
                   React.createElement('div', { className: 'position' }, `(${Math.round(position.x)}, ${Math.round(position.y)})`)
+              ),
+
+              // Chat box (local-only)
+              React.createElement('div', { className: 'chat-box' },
+                  React.createElement('div', { className: 'chat-header' }, 'Chat'),
+                  React.createElement('div', { className: 'chat-messages' },
+                      // show most recent messages on top (we display reversed order in css)
+                      chatMessages.slice().reverse().map(m =>
+                          React.createElement('div', { key: m.id, className: 'chat-message' },
+                              React.createElement('div', { className: 'chat-meta' }, m.username),
+                              React.createElement('div', null, m.text)
+                          )
+                      )
+                  ),
+                  React.createElement('form', { onSubmit: handleChatSend, style: { display: 'flex' } },
+                      React.createElement('input', {
+                          className: 'chat-input',
+                          value: chatInput,
+                          onChange: handleChatChange,
+                          onKeyDown: onChatKeyDown,
+                          placeholder: 'type (lowercase only)...',
+                          maxLength: 200,
+                          autoComplete: 'off'
+                      }),
+                      React.createElement('button', { type: 'button', className: 'chat-send-btn', onClick: handleChatSend }, 'Send')
+                  )
               ),
 
               // Character modal
